# etch

./: .gitignore  LICENSE
backend/: mypy.ini  pyproject.toml
frontend/: .eslintrc.js  package.json  pnpm-lock.yaml
